[package]
name = "google_drive_fs"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { version = "2.0.1", features = ["deref", "from"] }
itertools = "0.14.0"
mime_guess = "2.0.5"
thiserror = "2.0.12"
tracing = "0.1.41"
serde = { version = "1.0.219", features = ["derive"] }
error-stack = "0.5.0"
huh = {path = "../huh"}
google-drive3 = "6.0.0"
